# document-tokenizer

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-build.yaml  helm-push.yaml  lint.yaml
chart/python-template/: Chart.yaml  values.yaml
chart/python-template/templates/: _helpers.tpl  configMap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets-docker.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
src/: main.py  migrate.py
src/database/: config.py  connection.py
src/database/entity/: event.py
src/database/repository/: event_repository.py
src/service/: service.py
src/test/: test_service.py
