[tool.poetry]
name = "document-tokenizer"
version = "0.1.0"
description = "Document tokinzer  for similarity service"

authors = [
    "Teis N. Petersen <teis.petersen@uniwise.dk>"
]

repository = "https://github.com/UNIwise/document-tokenizer"

[tool.poetry.dependencies]
python = ">=3.8"

uvicorn = "^0.20.0" 

environs = "9.5.0"
dataclasses-json = "0.5.7"
deltalake = "0.6.4"
pandas = "1.5.2"
SQLAlchemy = "1.4.46"
psycopg2-binary = "2.9.5"
sqlalchemy-cockroachdb = "1.4.4"
flask = "2.2.2"
fastapi = "^0.89.1"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
pylint = "2.15.10"
black = "22.10.0"

[tool.poetry.group.dev]
optional = true